Bug 1755767 - Make sure not to call HandshakeDone after Close() is calleed r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D141957